# fastapi-tenants

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  references.md
examples/provider/: README.md
examples/provider/app/: main.py  tenant.py
examples/provider/app/dependencies/: db.py
