[tool.poetry]
name = "fastapi-tenants"
version = "0.1.0-alpha.1"
description = "Multi-Tenancy for FastAPI"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
readme = "README.md"
packages = [{include = "fastapi_tenants"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
